--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,3 +1,4 @@
 project(test)
-
-add_executable(test 3.Longest-Substring-Without-Repeating-Characters.cpp)
+add_compile_options(-fsanitize=address)
+add_link_options(-fsanitize=address)
+add_executable(test 11.Container-With-Most-Water.cpp)
